--- a/index.html
+++ b/index.html
@@ -3,18 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Frontend Mentor | Todo app</title>
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <title>Frontend Mentor | Todo app</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="container-fluid MainCont"></section>
+    <section class="container-fluid MainCont">
+      <div class="">
+        <span>Todo</span>
+        <span><i class="bi bi-moon"></i></span>
+      </div>
+    </section>
     <section class="listCont"></section>
-    Todo
 
     <!-- Add dynamic number -->
     items left All Active Completed Clear Completed Drag and drop to reorder
