--- a/index.html
+++ b/index.html
@@ -14,17 +14,60 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
 
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Public+Sans:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <section class="container-fluid MainCont">
-      <div class="">
-        <span>Todo</span>
-        <span><i class="bi bi-moon"></i></span>
+    <section class="container-fluid MainCont flex-column">
+      <div
+        class="col-10 col-md-8 col-lg-5 fw-bold todo__header d-flex justify-content-between mb-4"
+      >
+        <span>TODO</span>
+        <span class="btn__mode"><i class="bi bi-moon"></i></span>
+      </div>
+      <div class="col-10 col-md-8 col-lg-5 todo__add">
+          <input type="radio" id="enter" />
+        <label for="enter"> <span></span></label>
+        <input type="text" id="taskinp" />
       </div>
     </section>
-    <section class="listCont"></section>
+    <section class="listCont d-flex align-items-center flex-column">
+      <ul class="list-group col-10 col-md-8 col-lg-5 todo__list">
+        <li class="list-group-item p-3">
+          <input type="radio" id="1" />
+          <label for="1"> <span></span></label
+          ><span class="p-3">A third item</span>
+        </li>
+        <li class="list-group-item">
+          <input type="radio" id="2" /> <label for="2"> <span></span></label
+          ><span class="p-3">A third item</span>
+        </li>
+        <li class="list-group-item">
+          <input type="radio" id="6" /> <label for="6"> <span></span></label
+          ><span class="p-3">A third item</span>
+        </li>
+        <li class="list-group-item">
+          <input type="radio" id="3" /> <label for="3"> <span></span></label
+          ><span class="p-3">A third item</span>
+        </li>
+        <li class="list-group-item">
+          <input type="radio" id="4" /> <label for="4"> <span></span></label
+          ><span class="p-3">A third item</span>
+        </li>
+      </ul>
+    </section>
 
     <!-- Add dynamic number -->
     items left All Active Completed Clear Completed Drag and drop to reorder
@@ -36,5 +79,10 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
