feat: Implement delete completed tasks feature

--- a/index.html
+++ b/index.html
@@ -46,11 +46,7 @@
       </div>
     </section>
     <section class="listCont d-flex align-items-center flex-column">
-      <ul class="list-group col-10 col-md-8 col-lg-5 todo__list">
-        <li class="list-group-item">
-          left All Active Completed Clear Completed
-        </li>
-      </ul>
+      <ul class="list-group col-10 col-md-8 col-lg-5 todo__list"></ul>
     </section>
 
     <!-- Add dynamic number -->
