--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
       </div>
     </section>
     <section class="listCont d-flex align-items-center flex-column">
-      <ul class="list-group col-10 col-md-8 col-lg-5 todo__list"></ul>
+      <ul
+        class="list-group col-10 col-md-8 col-lg-5 todo__list"
+        id="todoList"
+      ></ul>
     </section>
 
     <!-- Add dynamic number -->
